# SimpleImServer

./: CMakeLists.txt  README.md  main.cpp  project.hpp
application/: CMakeLists.txt  DatabaseService.cc  DatabaseService.hpp
data_model/: CMakeLists.txt
data_model/messages/: AddFriendRequest.cpp  AddFriendRequest.hpp  AddFriendResponce.cpp  AddFriendResponce.hpp  LoginResponce.cpp  LoginResponce.hpp  UserMsgRequest.cpp  UserMsgRequest.hpp  UserMsgResponce.cpp  UserMsgResponce.hpp  loginResponce.cpp
data_model/model/: Group.hpp  User.cpp  User.hpp  UserMsgContent.cpp  UserMsgContent.hpp  UserMsgIndex.cpp  UserMsgIndex.hpp  UserMsgRelation.hpp
database/: CMakeLists.txt  DatabaseService.cpp  DatabaseService.hpp  UserRelationTable.hpp  UserTable.cpp  UserTable.hpp
db_interface/: IUserMsgContentTable.hpp  IUserMsgIndexTable.hpp  IUserRelationTable.hpp  IUserTable.hpp  InetService.hpp
db_module/: CMakeLists.txt  DatabaseProxy.cpp  DatabaseProxy.hpp  DbProxy.cpp  DbProxy.hpp  UserMsgContentTable.cpp  UserMsgContentTable.hpp  UserMsgIndexTable.cpp  UserMsgIndexTable.hpp  UserRelationTable.cpp  UserRelationTable.hpp  UserTable.cpp  UserTable.hpp
infrastructure/: CMakeLists.txt  Singleton.hpp  project.hpp
infrastructure/messages/: LoginRequest.cc  LoginRequest.hpp  LoginResponce.hpp
interfaces/: IUserRelationTable.hpp  IUserTable.hpp  InetService.hpp  UserService.hpp
socket/: AddFriendHandle.hpp  CMakeLists.txt  ConnManager.cpp  ConnManager.hpp  Connection.cc  Connection.cpp  Connection.hpp  ConnectionManager.hpp  LoginHandle.hpp  TcpServer.cpp  TcpServer.hpp  UserMsgContentHandle.hpp
(+7 files in other folders)
